<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.DjIdFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dj_id_text"
        android:textSize="40sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
        app:layout_constraintTop_toTopOf="@+id/dj_id_horizontal_guideline1" />

    <EditText
        android:id="@+id/edittext_dj_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/dj_id_hint"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
        app:layout_constraintTop_toTopOf="@+id/dj_id_horizontal_guideline2" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dj_id_description_text"
        android:textSize="22sp"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
        app:layout_constraintTop_toTopOf="@+id/dj_id_horizontal_guideline4" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/send_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
        app:layout_constraintTop_toTopOf="@+id/dj_id_horizontal_guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dj_id_horizontal_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

</androidx.constraintlayout.widget.ConstraintLayout>