<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ForgotPasswordFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rsz_login_img" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/password_reset_text"
        android:textSize="40sp"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/login_guideline1"
        app:layout_constraintTop_toBottomOf="@+id/login_horizontal_guideline1" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toEndOf="@id/login_guideline2"
        app:layout_constraintStart_toStartOf="@id/login_guideline1"
        app:layout_constraintTop_toBottomOf="@id/login_horizontal_guideline2" />

    <Button
        android:id="@+id/button_reset_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reset_pass_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline2"
        app:layout_constraintStart_toStartOf="@+id/login_guideline1"
        app:layout_constraintTop_toTopOf="@+id/login_horizontal_guideline3" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />


</androidx.constraintlayout.widget.ConstraintLayout>