<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.WelcomeFragment">


    <TextView
        android:id="@+id/textview_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_text"
        android:textSize="40sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/welcome_guideline2"
        app:layout_constraintStart_toStartOf="@+id/welcome_guideline1"
        app:layout_constraintTop_toTopOf="@+id/welcome_horizontal_guideline1" />

    <TextView
        android:id="@+id/textview_welcome_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_description_text"
        android:textSize="25sp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/welcome_guideline2"
        app:layout_constraintStart_toStartOf="@id/welcome_guideline1"
        app:layout_constraintTop_toBottomOf="@id/welcome_horizontal_guideline2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/continue_text"
        app:layout_constraintDimensionRatio="2.3:1"
        app:layout_constraintEnd_toStartOf="@+id/welcome_guideline4"
        app:layout_constraintStart_toStartOf="@+id/welcome_guideline3"
        app:layout_constraintTop_toTopOf="@+id/welcome_horizontal_guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/welcome_horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />
</androidx.constraintlayout.widget.ConstraintLayout>