<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.SetIdFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rsz_set_id" />

    <TextView
        android:id="@+id/textview_set_your_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/set_your_id_text"
        android:textSize="40sp"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/onboarding_guideline2"
        app:layout_constraintStart_toStartOf="@id/onboarding_guideline1"
        app:layout_constraintTop_toBottomOf="@id/onboarding_horizontal_guideline1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/set_your_id_description_text"
        android:textSize="25sp"
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="@id/onboarding_guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/onboarding_guideline1"
        app:layout_constraintTop_toBottomOf="@id/textview_set_your_id" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/next_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_guideline2"
        app:layout_constraintStart_toStartOf="@+id/onboarding_guideline1"
        app:layout_constraintTop_toTopOf="@+id/onboarding_horizontal_guideline2" />

    <ImageView
        android:id="@+id/imageview_dot1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_horizontal_guideline4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageview_dot2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onboarding_horizontal_guideline3"
        app:layout_constraintVertical_bias="0.535"
        app:srcCompat="@drawable/selected" />

    <ImageView
        android:id="@+id/imageview_dot2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_horizontal_guideline4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageview_dot3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageview_dot1"
        app:layout_constraintTop_toTopOf="@+id/onboarding_horizontal_guideline3"
        app:srcCompat="@drawable/unselected" />

    <ImageView
        android:id="@+id/imageview_dot3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_horizontal_guideline4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageview_dot2"
        app:layout_constraintTop_toTopOf="@+id/onboarding_horizontal_guideline3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/unselected" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>